[package]
name = "spidermeme"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
categories = ["data-structures", "rust-patterns"]
description = "Traits to test for type equality and type inequality"
edition = "2018"
keywords = ["metaprogramming", "type-level", "equality", "types", "inequality"]
license = "MIT OR Apache-2.0"
readme = "README.markdown"
repository = "https://github.com/ErnWong/spidermeme"

[dev-dependencies]
static_assertions = "1.1.0"
